[project]
name = "hello"
version = "0.1.0"
description = "Say hello to a friend"
readme = "README.md"
authors = [
    { name = "Jan Mirco Pfeifer", email = "126580858+janmirco@users.noreply.github.com" }
]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
